--- a/alchemist-game.cabal
+++ b/alchemist-game.cabal
@@ -19,6 +19,6 @@ library
   exposed-modules:     Tools.Game.Alchemists.Reagents
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6
   -- hs-source-dirs:      
   default-language:    Haskell2010
