--- a/alchemist-game.cabal
+++ b/alchemist-game.cabal
@@ -16,9 +16,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Tools.Game.Alchemists.Reagents
-  -- other-modules:       
+  exposed-modules:     Tools.Game.Alchemists.Cli, Tools.Game.Alchemists.Reagents
+  other-modules:       Tools.Game.Alchemists.PerEnum
   -- other-extensions:    
-  build-depends:       base >=4.6
+  build-depends:       base >=4.6, boxes
   -- hs-source-dirs:      
   default-language:    Haskell2010
